--- a/flutter_ui/web/index.html
+++ b/flutter_ui/web/index.html
@@ -23,10 +23,10 @@
   <!-- iOS meta tags & icons -->
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
-  <meta name="apple-mobile-web-app-title" content="webtest1">
+  <meta name="apple-mobile-web-app-title" content="invitease">
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
-  <title>webtest1</title>
+  <title>invitease</title>
   <link rel="manifest" href="manifest.json">
 </head>
 <body>
